<resources>
    <string name="app_name">1201107_1200757_CourseProject</string>
    <string name="title_activity_todohome">TODOHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_searchtask">SearchTask</string>


    <string name="menu_today">Today</string>
    <string name="menu_new_task">New Task</string>
    <string name="menu_all">All</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>