<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_today_24"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_new_task"
            android:icon="@drawable/ic_add_task"
            android:title="@string/menu_new_task" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_list_bulleted"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/ic_checklist"
            android:title="@string/menu_completed" />
        <item
            android:id="@+id/nav_searchtask"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>